--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.core:core-ktx:1.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
@@ -68,4 +69,5 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-scalars:2.1.0"
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation "com.squareup.okhttp3:logging-interceptor:3.11.0"
+    implementation 'com.facebook.shimmer:shimmer:0.4.0'
 }
