--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,14 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         multiDexEnabled true
+
+        def endpointFile = file('endpoint.properties')
+        Properties endpointProperties = new Properties()
+        endpointProperties.load(new FileInputStream(endpointFile))
+
+        buildConfigField 'String', 'BASE_URL', endpointProperties['BASE_URL']
+        buildConfigField 'String', 'API_KEY', endpointProperties['API_KEY']
+        buildConfigField 'String', 'LOAD_IMAGE_URL', endpointProperties['LOAD_IMAGE_URL']
     }
 
     dataBinding {
@@ -70,4 +78,9 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation "com.squareup.okhttp3:logging-interceptor:3.11.0"
     implementation 'com.facebook.shimmer:shimmer:0.4.0'
+    implementation "com.github.bumptech.glide:glide:4.8.0"
+    implementation ('com.github.bumptech.glide:okhttp3-integration:4.8.0'){
+        exclude group: 'glide-parent'
+    }
+    kapt 'com.github.bumptech.glide:compiler:4.8.0'
 }
