--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,4 +83,5 @@ dependencies {
         exclude group: 'glide-parent'
     }
     kapt 'com.github.bumptech.glide:compiler:4.8.0'
+    implementation 'com.github.markomilos:paginate:0.5.1'
 }
