--- a/app/endpoint.properties
+++ b/app/endpoint.properties
@@ -1,3 +1,5 @@
 BASE_URL="https://api.themoviedb.org/3/"
 API_KEY="b48c5932ce20a5c8f13d99b03deeeb77"
 LOAD_IMAGE_URL="https://image.tmdb.org/t/p/w500/"
+USERNAME = "ahmaadyunus"
+PASSWORD = "Password123"
