--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,22 @@ android {
     kotlinOptions {
         jvmTarget = "1.8"
     }
+
+
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+        testOptions {
+            unitTests.returnDefaultValues = true
+        }
+    }
+
+    testOptions {
+        unitTests.all {
+            jvmArgs '-noverify'
+        }
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -86,4 +102,37 @@ dependencies {
     }
     kapt 'com.github.bumptech.glide:compiler:4.8.0'
     implementation 'com.github.markomilos:paginate:0.5.1'
+
+    testImplementation 'org.mockito:mockito-core:2.23.0'
+    androidTestImplementation 'org.mockito:mockito-core:2.23.0'
+
+    testImplementation('org.robolectric:robolectric:4.1') {
+        exclude module: 'classworlds'
+        exclude module: 'maven-artifact'
+        exclude module: 'maven-artifact-manager'
+        exclude module: 'maven-error-diagnostics'
+        exclude module: 'maven-model'
+        exclude module: 'maven-plugin-registry'
+        exclude module: 'maven-profile'
+        exclude module: 'maven-project'
+        exclude module: 'maven-settings'
+        exclude module: 'nekohtml'
+        exclude module: 'plexus-container-default'
+        exclude module: 'plexus-interpolation'
+        exclude module: 'plexus-utils'
+        exclude module: 'wagon-file'
+        exclude module: 'wagon-http-lightweight'
+        exclude module: 'wagon-http-shared'
+        exclude module: 'wagon-provider-api'
+        exclude group: 'com.android.support', module: 'support-v4'
+    }
+    testImplementation "org.robolectric:multidex:3.4.2"
+    testImplementation 'org.amshove.kluent:kluent:1.14'
+    testImplementation('com.nhaarman:mockito-kotlin-kt1.1:1.5.0') {
+        exclude group: 'org.jetbrains.kotlin'
+    }
+    androidTestImplementation('com.nhaarman:mockito-kotlin-kt1.1:1.5.0') {
+        exclude group: 'org.jetbrains.kotlin'
+    }
+    androidTestImplementation 'androidx.test:rules:1.3.0-alpha02'
 }
